# token-usage

./: .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: claude_code.py  cursor.py  team.py
backend/app/services/: stats_service.py
backend/scripts/: claude_code_stats.py  cursor_stats.py  team_summary.py
docs/: README.md  data-sources.md  stats-calculation.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityHeatmap.tsx  ComparisonTable.tsx  FileUploader.tsx  MigrationProgress.tsx  PersonalTab.tsx  TeamTab.tsx  TrendChart.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
